--- a/_includes/small_canvas.html
+++ b/_includes/small_canvas.html
@@ -1,1 +1,1 @@
-<canvas class="small_canvas" data-fragment-url="/shader/{{ include.shader }}" width="500" height="500"></canvas>
+<canvas class="glslCanvas" data-fragment-url="/shader/{{ include.shader }}" width="500" height="500"></canvas>
