No curly brackets inside include

--- a/_includes/small_canvas.html
+++ b/_includes/small_canvas.html
@@ -1,2 +1,2 @@
-{% assign sh = site.shader | where:"title", include.shader-title  | first %}
+{% assign sh = site.shader | where:"title", include.shaderid  | first %}
 <canvas class="glslCanvas" data-fragment="{{ sh.content }}"></canvas>
