Pass shader code directly

--- a/_includes/small_canvas.html
+++ b/_includes/small_canvas.html
@@ -1,2 +1,1 @@
-{% assign sh = site.shader | where:"title", include.shaderid  | first %}
-<canvas class="glslCanvas" data-fragment="{{ sh.content }}"></canvas>
+<canvas class="glslCanvas" data-fragment="{{ include.code }}"></canvas>
