Put shader back into frag files, since couldn't get raw code from jekyll collection

--- a/_includes/small_canvas.html
+++ b/_includes/small_canvas.html
@@ -1,1 +1,1 @@
-<canvas class="glslCanvas" data-fragment="{{ include.code }}"></canvas>
+<canvas class="glslCanvas" data-fragment-url="https://brnrdlang.github.io/visual-complexity/assets/shader/{{ include.file }}"></canvas>
