--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,8 +3,18 @@
 
 @import "{{ site.theme }}";
 
-.glslCanvas {
+.gallery {
   position: relative;
   width: 33%;
   padding-top: 33%;
+}
+
+.glslShader {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
 }
