--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -8,14 +8,11 @@
   width: 33%;
   padding-top: 33%;
   float: left;
+  background-color: #333333;
 }
 
 .glslShader {
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
+    position: relative;
     width: 100%;
     height: 100%;
 }
