--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,15 +4,11 @@
 @import "{{ site.theme }}";
 
 .gallery {
-  position: relative;
-  width: 33%;
-  padding-top: 33%;
   float: left;
-  background-color: #333333;
 }
 
 .glslShader {
-    position: relative;
-    width: 100%;
-    height: 100%;
+    width: 160px;
+    height: 160px;
+    margin: 5px;
 }
