--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,11 +4,17 @@
 @import "{{ site.theme }}";
 
 .gallery {
-  float: left;
+  position: relative;
+  width: 33%;
+  padding-top: 33%;
 }
 
-.glslShader {
-    width: 160px;
-    height: 160px;
-    margin: 5px;
+.glslCanvas {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
 }
