--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,8 +5,10 @@
 
 .gallery {
   position: relative;
-  width: 33%;
-  padding-top: 33%;
+  width: 20%;
+  padding-top: 20%;
+  margin: 10%
+  float: left;
 }
 
 .glslCanvas {
