--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,18 +5,17 @@
 
 .gallery {
   position: relative;
-  width: 20%;
-  padding-top: 20%;
-  margin: 10%
+  width: 33%;
+  padding-top: 33%;
   float: left;
 }
 
 .glslCanvas {
     position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    width: 100%;
-    height: 100%;
+    top: 5%;
+    left: 5%;
+    width: 90%;
+    height: 90%;
+    border-style: solid;
+    border-width: 1px;
 }
