--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -22,7 +22,9 @@
 }
 
 #bg-canvas {
-  position: absolute;
+  position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
   z-index: -1;
