default canvas style

--- a/_includes/canvas.html
+++ b/_includes/canvas.html
@@ -1,1 +1,3 @@
+<div class="demo">
 <canvas class="glslCanvas" data-fragment-url="https://brnrdlang.github.io/visual-complexity/assets/shader/{{ include.file }}"></canvas>
+</div>
