--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,6 +3,13 @@
 
 @import "{{ site.theme }}";
 
+section {
+  position: absolute;
+  top: 0;
+  background-color: rgba(255, 255, 255, 0.7);
+  min-height: 100%;
+}
+
 .gallery {
   position: relative;
   width: 33%;
@@ -19,6 +26,17 @@
   border-style: solid;
   border-width: 1px;
   cursor: pointer;
+}
+
+.demo {
+  position: relative;
+  width: 50%;
+  padding-top: 50%;
+}
+
+.demo .glslCanvas {
+  width: 100%;
+  height: 100%;
 }
 
 #bg-canvas {
