--- a/_includes/gallery_canvas.html
+++ b/_includes/gallery_canvas.html
@@ -1,3 +1,3 @@
 <div class="gallery">
-<canvas class="glslCanvas" onclick="location.href='{{ site.baseurl }}{{ include.shader.url }}';" data-fragment-url="https://brnrdlang.github.io/visual-complexity/assets/shader/{{ include.shader.file }}"></canvas>
+<canvas class="glslCanvas" onclick="location.href='{{ site.baseurl }}{{ include.shader.url }}';" data-fragment-url="https://brnrdlang.github.io/visual-complexity/assets/shader/{{ include.shader.file }}" height="300" width="300"></canvas>
 </div>
